MMT-1375 prevent wrapping for dropdown items

--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -169,6 +169,10 @@ header.mmt-header {
   font-size: 0.8em;
 }
 
+.dropdown-item {
+  white-space: nowrap;
+}
+
 .login-info-dropdown {
   width: 115px;
   text-align: left;
